tests/ui/rust-2018/uniform-paths/prelude-fail-2.stderr
error: cannot use a built-in attribute through an import
  --> $DIR/prelude-fail-2.rs:15:3
   |
LL | #[imported_inline]
   |   ^^^^^^^^^^^^^^^
   |
note: the built-in attribute imported here
  --> $DIR/prelude-fail-2.rs:4:5
   |
LL | use inline as imported_inline;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use a built-in attribute through an import
  --> $DIR/prelude-fail-2.rs:16:3
   |
LL | #[builtin::imported_inline]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use a tool module through an import
  --> $DIR/prelude-fail-2.rs:17:3
   |
LL | #[imported_rustfmt::skip]
   |   ^^^^^^^^^^^^^^^^
   |
note: the tool module imported here
  --> $DIR/prelude-fail-2.rs:10:5
   |
LL | use rustfmt as imported_rustfmt;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use a tool module through an import
  --> $DIR/prelude-fail-2.rs:19:13
   |
LL | #[tool_mod::imported_rustfmt::skip]
   |             ^^^^^^^^^^^^^^^^
   |
note: the tool module imported here
  --> $DIR/prelude-fail-2.rs:12:13
   |
LL |     pub use rustfmt as imported_rustfmt;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use a tool module through an import
  --> $DIR/prelude-fail-2.rs:17:3
   |
LL | #[imported_rustfmt::skip]
   |   ^^^^^^^^^^^^^^^^
   |
note: the tool module imported here
  --> $DIR/prelude-fail-2.rs:10:5
   |
LL | use rustfmt as imported_rustfmt;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: cannot use a tool module through an import
  --> $DIR/prelude-fail-2.rs:19:13
   |
LL | #[tool_mod::imported_rustfmt::skip]
   |             ^^^^^^^^^^^^^^^^
   |
note: the tool module imported here
  --> $DIR/prelude-fail-2.rs:12:13
   |
LL |     pub use rustfmt as imported_rustfmt;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 6 previous errors

